front-end/front-end-dep.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: front-end
  namespace: test
  labels:
    app: front-end
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: rayanah/front-end
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8079
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    nodePort: 30001
  selector:
    app: front-end
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socks-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
