front-end/ingress-front-end.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socks-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
